--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "compression": "^1.6.0",
     "connect-redis": "^2.5.1",
     "cookie-parser": "~1.3.2",
+    "csurf": "^1.8.3",
     "ejs": "~1.0.0",
     "express": "~4.6.1",
     "express-load": "~1.1.14",
